<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pending_approvals"
            android:icon="@drawable/ic_pending"
            android:title="@string/pending_approvals" />

        <item
            android:id="@+id/nav_pending_loans"
            android:icon="@drawable/ic_loan"
            android:title="@string/pending_loans" />

        <item
            android:id="@+id/nav_all_customers"
            android:icon="@drawable/ic_customers"
            android:title="@string/all_customers" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>